<resources>
    <string name="app_name">My Application</string>
    <string name="activity_setup">Activity启动模式测试</string>
    <string name="first_short">first</string>
    <string name="first_long">启停活动</string>
    <string name="second_short">second</string>
    <string name="second_long">登录</string>


    <!--    登录界面的文字资源-->
    <string name="login_by_password">密码登录</string>
    <string name="login_by_verifycode">验证码登录</string>
    <string name="phone_number">手机号码：</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="login_password">登录密码：</string>
    <string name="input_password">请输入密码：</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登 &#160; &#160; &#160; 录</string>
    <string name="input_new_password">输入新密码：</string>
    <string name="input_new_password_hint">请从新输入密码</string>
    <string name="confirm_new_password">确认新密码：</string>
    <string name="input_new_password_again">请再次确认新密码</string>
    <string name="verifycode"> &#160; &#160;验证码：</string>
    <string name="input_verifycode"> 请输入验证码</string>
    <string name="get_verifycode"> 获取验证码</string>
    <string name="done"> 确&#160; &#160; &#160;定</string>

</resources>