<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <!--    用户名-->
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="@dimen/common_font_size"
        android:background="@color/textBackground"/>

    <!--     线性布局，电话号码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/input_new_password"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/common_font_size"/>

        <EditText
            android:id="@+id/et_password_first"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_selector"
            android:hint="@string/input_new_password_hint"
            android:inputType="numberPassword"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/common_font_size"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <!--    线性布局， 密码登录-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/confirm_new_password"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/common_font_size"/>

        <!--        相对布局-->
        <EditText
            android:id="@+id/et_password_second"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_selector"
            android:hint="@string/input_new_password_again"
            android:inputType="numberPassword"
            android:maxLength="11"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="@dimen/common_font_size"
            tools:ignore="TouchTargetSizeCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_layout_height"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="        验证码："
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="@dimen/common_font_size"/>

        <!--        相对布局-->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/et_verifycode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_selector"
                android:hint="@string/input_verifycode"
                android:inputType="numberPassword"
                android:maxLength="11"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/common_font_size"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btn_verifycode"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:text="@string/get_verifycode"
                android:textColorHint="@color/black"
                android:textSize="@dimen/common_font_size"/>


        </RelativeLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btn_code_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/done"
        android:textSize="@dimen/common_font_size"
        android:textColor="@color/black"/>

</LinearLayout>